updated nav items

--- a/index.html
+++ b/index.html
@@ -24,28 +24,28 @@
                     </li>
                     <li><a href="#">Sports</a></li>
                     <li><a href="#">Fitness</a></li>
-                    <li class="drop-down"> <a href="#">Nav 3.4</a>
+                    <li class="drop-down"> <a href="#">Supplements</a>
                         <ul class="sub-menu">
-                            <li><a href="#">Nav 3.4.1</a></li>
-                            <li class="drop-down"> <a href="#">Nav 3.4.2</a>
+                            <li><a href="#">Creatine</a></li>
+                            <li class="drop-down"> <a href="#">Protien</a>
                                 <ul class="sub-menu">
-                                    <li><a href="#">Nav 3.4.2.1</a></li>
-                                    <li><a href="#">Nav 3.4.2.2</a></li>
-                                    <li><a href="#">Nav 3.4.2.3</a></li>
-                                    <li><a href="#">Nav 3.4.2.4</a></li>
-                                    <li><a href="#">Nav 3.4.2.5</a></li>
+                                    <li><a href="#">Whey Protein</a></li>
+                                    <li><a href="#">Whey Isolate</a></li>
+                                    <li><a href="#">Hemp Protien</a></li>
+                                    <li><a href="#">Soy Protein</a></li>
+                                    <li><a href="#">Casein Protein</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#">Nav 3.4.3</a></li>
-                            <li><a href="#">Nav 3.4.4</a></li>
-                            <li><a href="#">Nav 3.4.5</a></li>
+                            <li><a href="#">Sleep Aids</a></li>
+                            <li><a href="#">Mass Gainer</a></li>
+                            <li><a href="#">Isolates</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Nav 3.5</a></li>
+                    <li><a href="#">Login</a></li>
                 </ul>
             </li>
-            <li><a href="#">Nav 4</a></li>
-            <li><a href="#">Nav 5</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Cart</a></li>
         </ul>
     </nav>
     <script src="js/jquery-1.9.1.min.js"></script>
