--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <li><a href="#">Isolates</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Login</a></li>
+                    <li><a href="#">Equipment</a></li>
                 </ul>
             </li>
             <li><a href="#">About</a></li>
